# Codewars

./: .gitignore  README.md
Haskell/Codewars.hsproj/: .uuid  AppleTurnover.hs  AverageCalculator.hs  Barycenter.hs  BinToDecimal.hs  BoundlessSum.hs  Codewars.cabal  Dupes.hs  Fib.hs  Find.hs  Hal.hs  HelloValidator.hs  HexToDecimal.hs  Highest.hs  If.hs  IsItWhitespace.hs  IsOpposite.hs  IsUpperCase.hs  Last.hs  LazyNext.hs  LostWithout.hs  MakeLower.hs  MaybeConcat.hs  Middle.hs  Multiply.hs  NameCombiner.hs  Odds.hs  ParseFloat.hs  Partial.hs  Plural.hs  RPG.hs  RelativePrimes.hs  RemoveDuplicates.hs  RemoveEnd.hs  ReplaceAllItems.hs  ReverseListOrder.hs  ReverseRecursively.hs  Shortcut.hs  Shortest.hs  Sum.hs  (+22 more)
Haskell/Codewars.hsproj/AppleTurnover/: AppleTurnover.hs  _AppleTurnover.hsplay
Haskell/Codewars.hsproj/AverageCalculator/: AverageCalculator.hs  _AverageCalculator.hsplay
Haskell/Codewars.hsproj/Barycenter/: Barycenter.hs  _Barycenter.hsplay
Haskell/Codewars.hsproj/BoundlessSum/: Sum.hs  _Sum.hsplay
Haskell/Codewars.hsproj/CountingDuplicates/: Dupes.hs  _Dupes.hsplay
Haskell/Codewars.hsproj/ExclamationMarks/: RemoveEnd.hs
Haskell/Codewars.hsproj/Fibonacci/: Fib.hs
Haskell/Codewars.hsproj/Grasshopper/: NameCombiner.hs
Haskell/Codewars.hsproj/HighestAndLowest/: Hal.hs  _Hal.hsplay
Haskell/Codewars.hsproj/HighestScoringWord/: Highest.hs
Haskell/Codewars.hsproj/IsItWhitespace/: IsItWhitespace.hs
Haskell/Codewars.hsproj/Last/: Last.hs
Haskell/Codewars.hsproj/LostWithout/: LostWithout.hs
Haskell/Codewars.hsproj/MakeLower/: MakeLower.hs
Haskell/Codewars.hsproj/MiddleCharacter/: Middle.hs
Haskell/Codewars.hsproj/MiddleElement/: Find.hs
Haskell/Codewars.hsproj/OddNumbers/: Sum.hs  _Sum.hsplay
Haskell/Codewars.hsproj/Odds/: Odds.hs
Haskell/Codewars.hsproj/PartialWordSearching/: Partial.hs  _Partial.hsplay
Haskell/Codewars.hsproj/Plural/: Plural.hs
Haskell/Codewars.hsproj/RelativePrimes/: RelativePrimes.hs  _RelativePrimes.hsplay
Haskell/Codewars.hsproj/ReplaceAllItems/: Replace.hs
Haskell/Codewars.hsproj/ReverseList/: ReverseRecursively.hs  _ReverseRecursively.hsplay
Haskell/Codewars.hsproj/Shortcut/: Shortcut.hs  _Shortcut.hsplay
Haskell/Codewars.hsproj/ShortestWord/: Shortest.hs  _Shortest.hsplay
Haskell/Codewars.hsproj/SumOddCubes/: Sum.hs  _Sum.hsplay
Haskell/Codewars.hsproj/SumRecursively/: Sum.hs
Haskell/Codewars.hsproj/ToLeetSpeak/: ToLeetSpeak.hs  _ToLeetSpeak.hsplay
Haskell/Codewars.hsproj/TwiceLinear/: Twice.hs  _Twice.hsplay
Haskell/Codewars.hsproj/UnfinishedLoop/: Loop.hs
Haskell/Codewars.hsproj/VowelCount/: Vowels.hs  _Vowels.hsplay
Haskell/Codewars.hsproj/Watermelon/: Watermelon.hs
Haskell/Codewars.hsproj/WhatsUpNext/: LazyNext.hs
Ruby/HighestAndLowest/: kata.rb
Ruby/PartialWordSearching/: partial.rb
Ruby/SumWithoutBounds/: script.rb
Ruby/UnfinishedLoop/: loop.rb
Swift/Codewars.playground/: contents.xcplayground
Swift/Codewars.playground/Pages/PartialWordSearching.xcplaygroundpage/: Contents.swift
Swift/Codewars.playground/Pages/ReplaceAllItems.xcplaygroundpage/: Contents.swift
Swift/PartialWordSearching/: main.swift
Swift/ReplaceAllItems/: script.swift
Swift/SimpleMultiplication/: main.swift
(+1 files in other folders)
