name: Codewars
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Codewars
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      containers -any,
      split -any
  other-modules:
      Barycenter
      LazyNext
      TwiceLinear
      Multiply
      Partial
      ReplaceAllItems
      Last
      Odds
      Watermelon
      SumRecursively
      UnfinishedLoop
      SumOddCubes
      Dupes
      IsItWhitespace
      ToLeetSpeak
      MakeLower
      AverageCalculator
      AppleTurnover
      VowelCount
      Sum
      Middle
      RelativePrimes
      RemoveEnd
      Fib
      Hal
      Plural
      Find
      Shortest
      Highest
      BoundlessSum
      ReverseRecursively
      Shortcut
      NameCombiner
      LostWithout
