name: Codewars
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Codewars
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      split -any,
      containers -any
  other-modules:
      Barycenter
      LazyNext
      HelloValidator
      Supersize
      RPG
      Multiply
      Partial
      ReplaceAllItems
      TwiceLinear
      BinToDecimal
      Last
      Odds
      Watermelon
      SumRecursively
      ParseFloat
      IsOpposite
      UnfinishedLoop
      SumOddCubes
      Dupes
      IsItWhitespace
      ToLeetSpeak
      MakeLower
      AverageCalculator
      AppleTurnover
      ReverseListOrder
      Sum
      RemoveDuplicates
      VowelCount
      If
      Middle
      RelativePrimes
      RemoveEnd
      Fib
      Hal
      Plural
      Find
      Shortest
      Highest
      BoundlessSum
      ReverseRecursively
      Shortcut
      NameCombiner
      LostWithout
